<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>no.kirschner</groupId>
    <artifactId>stromschnellen-spring-boot-starter</artifactId>
    <version>0.0.63-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>stromschnellen-spring-boot-starter</name>
    <description>Torsten's interpretation of Fred George's Rapids and Rivers idea</description>
    <url>https://github.com/torstenk/stromschnellen</url>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>torstenk</id>
            <name>Torsten Kirschner</name>
            <email>torsten@kirschner.no</email>
            <url>https://github.com/torstenk</url>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/torstenk/stromschnellen.git</connection>
        <developerConnection>scm:git:ssh://github.com:torstenk/stromschnellen.git</developerConnection>
        <url>https://github.com/torstenk/stromschnellen.git</url>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/torstenk/stromschnellen</url>
        </repository>
    </distributionManagement>
    <properties>
        <java.version>21</java.version>
        <spring-cloud-stream.version>4.3.0</spring-cloud-stream.version>
        <cloudevents-spring.version>4.0.1</cloudevents-spring.version>
        <uuid-creator.version>6.1.1</uuid-creator.version>
        <lombok.version>1.18.38</lombok.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream</artifactId>
            <version>${spring-cloud-stream.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-stream-binder-kafka</artifactId>
            <version>${spring-cloud-stream.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cloudevents</groupId>
            <artifactId>cloudevents-spring</artifactId>
            <version>${cloudevents-spring.version}</version>
        </dependency>
        <dependency>
            <groupId>io.cloudevents</groupId>
            <artifactId>cloudevents-json-jackson</artifactId>
            <version>${cloudevents-spring.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.f4b6a3</groupId>
            <artifactId>uuid-creator</artifactId>
            <version>${uuid-creator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>javadoc</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>21</source>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
